[gd_scene load_steps=8 format=3 uid="uid://bvf1ybjl7k11r"]

[ext_resource type="Texture2D" uid="uid://cdsbgskgexgwb" path="res://assets/textures/dummy/exampleGround.png" id="1_e77qm"]
[ext_resource type="PackedScene" uid="uid://c1gincyh23502" path="res://scenes/character.tscn" id="2_kx1yv"]
[ext_resource type="Texture2D" uid="uid://bl6n26vkfe7y4" path="res://assets/textures/dummy/examplePlayer.png" id="3_e4xaw"]
[ext_resource type="Script" uid="uid://jfftskjjcroh" path="res://scenes/character.gd" id="3_kx1yv"]
[ext_resource type="PackedScene" uid="uid://8lrpv78gfhfa" path="res://game/terminal/terminal.tscn" id="4_tgiw8"]
[ext_resource type="Script" uid="uid://7g3x17lqq0gf" path="res://scenes/villian.gd" id="5_e4xaw"]
[ext_resource type="Script" uid="uid://bjhy13bjo6n0c" path="res://scenes/game_logic_manager.gd" id="7_tgiw8"]

[node name="Stage1" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(256, 136.25)
scale = Vector2(1.964, 0.295)
texture = ExtResource("1_e77qm")

[node name="Character" parent="." instance=ExtResource("2_kx1yv")]
position = Vector2(265, 36)
script = ExtResource("3_kx1yv")
maxLives = 5
lives = 3

[node name="Sprite2D" type="Sprite2D" parent="Character"]
scale = Vector2(0.1025, 0.1025)
texture = ExtResource("3_e4xaw")

[node name="Villian" type="CharacterBody2D" parent="."]
position = Vector2(39, 41)
script = ExtResource("5_e4xaw")

[node name="Sprite2D" type="Sprite2D" parent="Villian"]
position = Vector2(-7.62939e-06, 7.62939e-06)
scale = Vector2(0.086, 0.086)
texture = ExtResource("3_e4xaw")

[node name="Terminal" parent="." instance=ExtResource("4_tgiw8")]
offset_left = -235.0
offset_top = 210.0
offset_right = 747.0
offset_bottom = 513.0
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(241, 278)
position_smoothing_enabled = true

[node name="GameLogicManager" type="Node" parent="."]
script = ExtResource("7_tgiw8")
correct_before_life_increase = 3
mistakes_before_life_loss = 3

[connection signal="game_over" from="Character" to="GameLogicManager" method="_on_character_game_over"]
[connection signal="correct_word_entered" from="Terminal" to="GameLogicManager" method="_on_terminal_correct_word_entered"]
[connection signal="incorrect_character_entered" from="Terminal" to="GameLogicManager" method="_on_terminal_incorrect_character_entered"]
[connection signal="life_gain" from="GameLogicManager" to="Character" method="_on_game_logic_manager_life_gain"]
[connection signal="life_gain" from="GameLogicManager" to="Villian" method="_on_game_logic_manager_life_gain"]
[connection signal="life_lost" from="GameLogicManager" to="Character" method="_on_game_logic_manager_life_lost"]
[connection signal="life_lost" from="GameLogicManager" to="Villian" method="_on_game_logic_manager_life_lost"]
